added new BookCreateOrUpdateCommandHandler
